<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_about_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/tv_about_des"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about_tv_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_about_des"
        android:layout_marginTop="10dp"
        android:background="@color/gray_4"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/tv_about_send"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/about_tv_update_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/tv_about_update_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about_tv_update_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_tv_update_des"
        android:layout_marginTop="10dp"
        android:background="@color/gray_4"
        android:clickable="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/tv_about_update_update"
        android:textSize="20sp" />


</RelativeLayout>
