<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue">

    <TextView
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:id="@+id/tv_actionbar_one_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/tv_actionbar_one_back"
        android:textSize="18sp" />

    <TextView
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:id="@+id/tv_actionbar_one_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_actionbar_one_title"
        android:textSize="18sp" />

    <TextView
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:id="@+id/tv_actionbar_one_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/tv_actionbar_one_share"
        android:textSize="18sp" />
</RelativeLayout>
