<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.IndexActivity">
    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_about"
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_expand"
        android:id="@+id/tv_expand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_button_switch"
        android:id="@+id/tv_button_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_pdf_read"
        android:id="@+id/tv_pdf_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
